--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,9 @@ jobs:
 
       - name: list files
         run: ls -a
+        
+      - name: Test OC
+        run: 
+          oc get pods || true
+          oc login -u kubeadmin api.crc.testing:6443
+          oc get pods
